Project 2/force-app/main/default/objects/Pokemon__c/fields/Ability1__c.field-meta.xml
<CustomField>
    <fullName>Ability1__c</fullName>
    <label>Ability1</label>
    <length>12</length>
    <type>Text</type>
</CustomField>