Project 2/force-app/main/default/objects/Pokemon__c/fields/Ability2__c.field-meta.xml
<CustomField>
    <fullName>Ability2__c</fullName>
    <label>Ability2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>