Project 2/force-app/main/default/objects/Pokemon__c/fields/Ability3__c.field-meta.xml
<CustomField>
    <fullName>Ability3__c</fullName>
    <label>Ability3</label>
    <length>12</length>
    <type>Text</type>
</CustomField>