Project 2/force-app/main/default/objects/Pokemon__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>