Project 2/force-app/main/default/objects/Pokemon__c/fields/Pokemon_Id__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Id__c</fullName>
    <label>Pokemon Id</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>